Fixed extra spacing from menu

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -21,7 +21,7 @@ a
     padding-top: 4px
 
 .bar-title ~ .content
-  top: 72px
+  top: 32px
 
 .listimg
   max-width: 400px
